--- a/DashboardPecas.html
+++ b/DashboardPecas.html
@@ -413,6 +413,8 @@
     }
   }
 
+  console.log
+  
   async function carregarDados() {
     const querySnapshot = await getDocs(collection(db, tipoChecklist));
     dadosTotais = [];
