--- a/DashboardPecas.html
+++ b/DashboardPecas.html
@@ -289,6 +289,24 @@
     </div>
   </header>
 
+  <button onclick="window.history.back()" title="Voltar"
+  style="
+    position: fixed;
+    top: 20px;
+    right: 20px;
+    background: linear-gradient(135deg, #00205b, #009bd6);
+    color: white;
+    border: none;
+    padding: 10px 16px;
+    border-radius: 8px;
+    font-size: 14px;
+    cursor: pointer;
+    box-shadow: 0 4px 10px rgba(0,0,0,0.4);
+    z-index: 9999;
+  ">
+  ← Voltar
+</button>
+
   <div class="main">
     <div class="sidebar">
       <div class="card pink-card">
