--- a/DashboardPecas.html
+++ b/DashboardPecas.html
@@ -297,6 +297,7 @@
     background: linear-gradient(135deg, #00205b, #009bd6);
     color: white;
     border: none;
+    margin-right; 10px;
     padding: 10px 16px;
     border-radius: 8px;
     font-size: 14px;
