--- a/DashboardPecas.html
+++ b/DashboardPecas.html
@@ -510,14 +510,19 @@ function aplicarFiltros() {
         <td>${d.modelo || "-"}</td>
         <td>${d.municipio || "-"}</td>
         <td>${d.horimetro || "-"}</td>
-        <td>
-            ${
-              d.telefone
-                ? `<a href="https://wa.me/55${d.telefone.replace(/\D/g, '')}" target="_blank" title="Chamar no WhatsApp" style="color: #25D366; text-decoration: none; font-size: 20px;">
-                      <i class="fa-brands fa-whatsapp"></i>
-                   </a>`
-                : "-"
-            }
+        <td style="text-align: center;">
+          ${
+            d.telefone
+              ? `
+                <div style="display: flex; flex-direction: column; align-items: center;">
+                  <div style="font-size: 12px; color: white; margin-bottom: 4px;">${d.nomeCliente || "-"}</div>
+                  <a href="https://wa.me/55${d.telefone.replace(/\D/g, '')}" target="_blank" title="Chamar no WhatsApp"
+                     style="color: #25D366; text-decoration: none; font-size: 22px;">
+                    <i class="fa-brands fa-whatsapp"></i>
+                  </a>
+                </div>`
+              : "-"
+          }
         </td>
         <td data-comentario="${d.comentarioResponsavel || ''}" data-valor="${d.valorNegociado || 0}">
         ${d.observacoes || "-"}
