--- a/form-comercial.html
+++ b/form-comercial.html
@@ -172,7 +172,7 @@
       <div class="checkbox-group">
         <label>
           SIM
-          <input type="checkbox" id="temTratorTroca" name="checklist" value="Trocar Trator">
+          <input type="checkbox" id="temTratorTroca" name="checklist">
         </label>
       </div> 
 
