--- a/teste.html
+++ b/teste.html
@@ -456,7 +456,7 @@ function aplicarFiltros() {
   const clienteFiltro = document.getElementById("filtro-cliente").value.toLowerCase();
   const statusFiltro = document.getElementById("filtro-status").value;
   const consultorFiltro = document.getElementById("filtro-consultor").value.toLowerCase();
-  onst consultorFiltro = document.getElementById("filtro-municipio").value.toLowerCase();
+  const consultorFiltro = document.getElementById("filtro-municipio").value.toLowerCase();
   const periodo = document.getElementById("filtro-periodo").value.trim();
 
   const instance = document.getElementById("filtro-periodo")._flatpickr;
