--- a/teste.html
+++ b/teste.html
@@ -606,21 +606,20 @@ document.getElementById("btn-exportar").addEventListener("click", () => {
   "Comentário", "Valor (R$)", "Status"
   ];
 
-  const linhas = Array.from(document.querySelectorAll("#painel-detalhes tr")).map(tr => {
+const linhas = Array.from(document.querySelectorAll("#painel-detalhes tr")).map(tr => {
     const tds = tr.querySelectorAll("td");
     return [
-      tds[0]?.textContent.trim(), // Cliente
-      tds[1]?.textContent.trim(), // Fazenda
-      tds[2]?.textContent.trim(), // Consultor
-      tds[3]?.textContent.trim(), // Data da Visita
+      tds[1]?.textContent.trim(), // Cliente
+      tds[3]?.textContent.trim(), // Consultor
+      tds[0]?.textContent.trim(), // Data da Visita
       tds[4]?.textContent.trim(), // Modelo
-      tds[5]?.textContent.trim(), // Município
-      tds[6]?.textContent.trim(), // Horímetro
+      tds[2]?.textContent.trim(), // Município
+      tds[5]?.textContent.trim(), // Horímetro
       tds[7]?.textContent.trim(), // Telefone
       tds[8]?.textContent.trim(), // Observações
       tds[9]?.innerText.trim(),   // Checklist
-      tds[8]?.getAttribute("data-comentario") || "",   // Comentário do Responsável
-      tds[8]?.getAttribute("data-valor") || "",        // Valor Negociado
+      tds[8]?.getAttribute("data-comentario") || "", // Comentário
+      tds[8]?.getAttribute("data-valor") || "",      // Valor
       tr.classList.contains("status-concluido") ? "Concluído" :
       tr.classList.contains("status-cancelado") ? "Cancelado" :
       tr.classList.contains("status-em-andamento") ? "Em andamento" : ""
