--- a/teste.html
+++ b/teste.html
@@ -475,11 +475,15 @@ function aplicarFiltros() {
 
   const filtrados = dadosTotais.filter(d => {
     const cliente = (d.nomeCliente || "").toLowerCase();
-    const municipio = (d.nomeCliente || "").toLowerCase();
+    const municipio = (d.municipio || "").toLowerCase();
     const status = d.statusChecklist || "";
     const consultor = (d.consultor || "").toLowerCase();
     const dataFormatada = d.dataVisita || "";
 
+    const clienteOk = cliente.includes(clienteFiltro);
+    const statusOk = statusFiltro === "" || status === statusFiltro;
+    const consultorOk = consultor.includes(consultorFiltro);
+    const municipioOk = municipio.includes(municipioFiltro);
     const dentroDoPeriodo =
       (!dataInicio && !dataFim) ||
       (
@@ -487,10 +491,7 @@ function aplicarFiltros() {
         (!dataFim || dataFormatada <= dataFim)
       );
 
-    return cliente.includes(clienteFiltro) &&
-           (statusFiltro === "" || status === statusFiltro) &&
-           consultor.includes(consultorFiltro) &&
-           dentroDoPeriodo;
+    return clienteOk && statusOk && consultorOk && municipioOk && dentroDoPeriodo;
   });
 
   // CONTADORES E RENDERIZAÇÃO
